# langchain

./: README.md  main.py  pyproject.toml
RAG/: ingestion.py  mahabharata_rag_large.txt  retrieval.py
ReAct/: app.py
ReAct/raw/: app.py
ReAct/realagent/: my_agent.py  my_tools.py  prompts.py
basics/: callingopenaiusingprompttemplate.py  llmoutputusingstreaming.py
structuredoutput/: app.py  basic.py
structuredoutput/types_providerstrategy/: providerstrategy.py  usingdataclass.py  usingjsonschema.py  usingtypeddict.py
tools/: customtavilysearchtoolcall.py  simpletoolcalling.py  tavilysearchusingtavily.py
